k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  namespace: jlab
  labels:
    name: jupyterlab
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    name: jupyterlab
