k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
    - host: jupyterlab.20.67.66.98.nip.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyterlab
                port:
                  number: 8888
